Implemented example and a basic solution/workaround
