# src/controllers/ApiRoute2.js
@@ -1,21 +1,25 @@
 const express = require('express')
-
-const router = express.Router()
 const authorize = require('../middlewares/auth')
 
-router.route('/test-get').get(authorize, (req, res, next) => {
-    // #swagger.description = "Description here..."
-    res.status(200).json({
-        data: [],
-        message: 'Successfully found'
-    })
-})
+const createRouter = async () => {
+    const router = express.Router()
 
-router.route('/test-delete/:id').delete(authorize, async (req, res, next) => {
-    res.status(200).json({
-        msg: [],
-        message: 'Delete!'
+    router.route('/test-get').get(authorize, (req, res, next) => {
+        // #swagger.description = "Description here..."
+        res.status(200).json({
+            data: [],
+            message: 'Successfully found'
+        })
     })
-})
 
-module.exports = router
+    router.route('/test-delete/:id').delete(authorize, async (req, res, next) => {
+        res.status(200).json({
+            msg: [],
+            message: 'Delete!'
+        })
+    })
+
+    return router;
+}
+
+module.exports = createRouter();
